Refactor User_Mode and User_Training_Weights notebooks
- Updated output messages in User_Mode.ipynb to reflect checkpoint 1 only.
- Reset execution counts in User_Training_Weights.ipynb for a fresh run.
- Added warning messages related to deprecated packages in User_Training_Weights.ipynb.
- Adjusted training sample count from 875 to 2790 in User_Training_Weights.ipynb.
- Updated training logs to reflect new accuracy and loss values during model training.
- Commented out the data collection function call in the main execution block for User_Training_Weights.ipynb.

--- a/Run_Model.ipynb
+++ b/Run_Model.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "add19033",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import resource_stream, resource_exists\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "from Core_Game_Parts import *\n",
     "import pygame\n",
@@ -20,18 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "c41a80d7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_41\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_41\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -43,11 +68,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_123 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
+       "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_124 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
+       "│ dense_1 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_125 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
+       "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -55,11 +80,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_123 (\u001b[38;5;33mDense\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
+       "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_124 (\u001b[38;5;33mDense\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
+       "│ dense_1 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_125 (\u001b[38;5;33mDense\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
+       "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -128,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "9ad69a8b",
    "metadata": {},
    "outputs": [
@@ -136,43 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error loading weights: A total of 3 objects could not be loaded. Example error message for object <Dense name=dense_126, built=True>:\n",
-      "\n",
-      "The shape of the target variable and the shape of the target value in `variable.assign(value)` must match. variable.shape=(4, 32), Received: value.shape=(4, 64). Target variable: <Variable path=sequential_42/dense_126/kernel, shape=(4, 32), dtype=float32, value=[[-0.23685893 -0.06073299  0.33682036 -0.08710808  0.3521924  -0.04636797\n",
-      "   0.2709021   0.35026324 -0.07572749 -0.02431053  0.40008897  0.22819954\n",
-      "  -0.15395638  0.36628926  0.36562598 -0.14341685  0.15896487 -0.054066\n",
-      "   0.23976481 -0.35768837 -0.25903717 -0.049725    0.02800611 -0.26188195\n",
-      "   0.15255195  0.40119267 -0.11390129  0.2985571   0.0814296   0.02732408\n",
-      "   0.2983405  -0.13282526]\n",
-      " [-0.28503448 -0.25244987 -0.09811771 -0.11161521  0.0056546  -0.27458578\n",
-      "  -0.06426612 -0.21189958 -0.33281574  0.35008764  0.12161958 -0.3475892\n",
-      "   0.08241609 -0.37503356  0.23186898  0.12444264 -0.25257796 -0.05039319\n",
-      "  -0.3791609   0.22286552  0.05762202  0.01282695  0.33110005 -0.11067885\n",
-      "  -0.40251514  0.13372618 -0.09465632  0.02671283 -0.00600931 -0.08219805\n",
-      "  -0.05804834 -0.33652288]\n",
-      " [-0.12050015 -0.17942673  0.21303159 -0.06624892 -0.22956151  0.34731025\n",
-      "   0.10129994 -0.1787523   0.08242649 -0.05127019  0.09340823 -0.22364478\n",
-      "   0.21535832 -0.00573891  0.20695227  0.13438249  0.33001912  0.15378207\n",
-      "   0.39194673  0.16163707  0.13593906 -0.02193519  0.26105165 -0.03044713\n",
-      "  -0.35331583  0.15198869 -0.267013    0.22011048  0.13937342 -0.40357655\n",
-      "  -0.04512832 -0.02722576]\n",
-      " [-0.19986248  0.15270221 -0.13711    -0.10028681 -0.081328    0.2684812\n",
-      "   0.30133104 -0.22593154 -0.35533696 -0.33530077 -0.3625281   0.11130714\n",
-      "   0.32219613  0.08343732  0.25680834  0.3369655  -0.01937327  0.12053168\n",
-      "   0.10603184 -0.33615488  0.03410107  0.10159206  0.3432848  -0.36679465\n",
-      "  -0.27851924 -0.01818305 -0.00295234 -0.3043509   0.18758363 -0.12150532\n",
-      "  -0.2996598   0.00336882]]>\n",
-      "\n",
-      "List of objects that could not be loaded:\n",
-      "[<Dense name=dense_126, built=True>, <Dense name=dense_127, built=True>, <Dense name=dense_128, built=True>]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 2 variables whereas the saved optimizer has 14 variables. \n",
-      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
+      "Error loading weights: [Errno 2] Unable to synchronously open file (unable to open file: name = 'finetuned_weights_episode_600.weights.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)\n"
      ]
     }
    ],
@@ -280,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "60c3e180",
    "metadata": {},
    "outputs": [
@@ -288,11 +277,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded final weights from: final_imitation.weights.h5\n",
+      "Successfully loaded final weights from: pretrained.weights.h5\n",
       "Car crashes!\n",
       "Total actions taken by the agent during the simulation:\n",
-      "Action 0: 1\n",
-      "Action 1: 49\n",
+      "Action 0: 38\n",
+      "Action 1: 81\n",
       "Action 2: 0\n"
      ]
     }
@@ -396,7 +385,7 @@
     "# --- RUN YOUR FINAL AGENT ---\n",
     "# ------------------------------------------------------------------\n",
     "# IMPORTANT: Change this to the name of the weights file saved in Phase 2\n",
-    "WEIGHTS_FILENAME = \"final_imitation.weights.h5\"\n",
+    "WEIGHTS_FILENAME = \"pretrained.weights.h5\"\n",
     "# ------------------------------------------------------------------\n",
     "\n",
     "if not pygame.display.get_init():\n",
