Remove obsolete binary files: final_imitation.weights.h5, pretrain_data.npy, and pretrained.weights.h5

--- a/A3C Training.ipynb
+++ b/A3C Training.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "72f85c78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 2.6.1 (SDL 2.28.4, Python 3.10.8)\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import time\n",
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "14d72b7e",
    "metadata": {},
    "outputs": [],
@@ -106,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b1a2eaae",
    "metadata": {},
    "outputs": [],
@@ -123,7 +132,10 @@
     "    return net\n",
     "\n",
     "def run_actor(actor_id, experience_queue, weights_path, stop_event):\n",
+    "    # --- FIX: Isolate this process to the CPU to prevent GPU deadlocks ---\n",
+    "    import tensorflow as tf\n",
     "    tf.config.set_visible_devices([], 'GPU')\n",
+    "\n",
     "    print(f\"[Actor {actor_id}] Started.\")\n",
     "    os.environ[\"SDL_VIDEODRIVER\"] = \"dummy\"\n",
     "    pygame.init()\n",
@@ -136,32 +148,38 @@
     "\n",
     "    while not stop_event.is_set():\n",
     "        if episode_count % 10 == 0:\n",
-    "            try: actor_model.load_weights(weights_path)\n",
-    "            except Exception: pass\n",
-    "        \n",
+    "            try:\n",
+    "                actor_model.load_weights(weights_path)\n",
+    "            except Exception:\n",
+    "                pass\n",
+    "\n",
     "        car = Car(CAR_IMAGE_PATH, DEFAULT_START_X, DEFAULT_START_Y, DEFAULT_START_ANGLE)\n",
     "        ckpt, total_r, max_s = 0, 0, 0\n",
     "        dist, _ = ray_casting(car, track_surface)\n",
     "        state = np.array(dist + [car.speed / MAX_SPEED])\n",
     "\n",
     "        for step in range(5000):\n",
+    "            print(f\"[Actor {actor_id}] Episode {episode_count}, Step {step}: Predicting action...\")\n",
+    "\n",
     "            action = random.randrange(3) if np.random.rand() <= epsilon else np.argmax(actor_model.predict(np.reshape(state, [1, 4]), verbose=0)[0])\n",
     "            dist_next, done, reward, new_ckpt = model_game_step(action, car, track_surface, ckpt)\n",
     "            next_state = np.array(dist_next + [car.speed / MAX_SPEED])\n",
-    "            \n",
+    "\n",
     "            experience_queue.put(('experience', (state, action, reward, next_state, done)))\n",
-    "            \n",
+    "\n",
     "            state, ckpt = next_state, new_ckpt\n",
     "            total_r += reward\n",
     "            max_s = max(max_s, car.speed)\n",
-    "            \n",
-    "            if done: break\n",
-    "        \n",
+    "\n",
+    "            if done:\n",
+    "                break\n",
+    "\n",
     "        experience_queue.put(('summary', (total_r, ckpt, max_s)))\n",
-    "        \n",
-    "        if epsilon > epsilon_min: epsilon *= epsilon_decay\n",
+    "\n",
+    "        if epsilon > epsilon_min:\n",
+    "            epsilon *= epsilon_decay\n",
     "        episode_count += 1\n",
-    "    \n",
+    "\n",
     "    print(f\"[Actor {actor_id}] Stopping.\")\n",
     "\n",
     "def run_learner(experience_queue, weights_path, stop_event, total_episodes):\n",
@@ -253,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "2da2e890",
    "metadata": {},
    "outputs": [
@@ -272,8 +290,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m     actors\u001b[38;5;241m.\u001b[39mappend(actor)\n\u001b[0;32m     20\u001b[0m     actor\u001b[38;5;241m.\u001b[39mstart()\n\u001b[1;32m---> 22\u001b[0m training_history \u001b[38;5;241m=\u001b[39m \u001b[43mrun_learner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperience_queue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mWEIGHTS_FILE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstop_event\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTOTAL_EPISODES_TO_TRAIN\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m actor \u001b[38;5;129;01min\u001b[39;00m actors:\n\u001b[0;32m     25\u001b[0m     actor\u001b[38;5;241m.\u001b[39mjoin()\n",
-      "Cell \u001b[1;32mIn[8], line 77\u001b[0m, in \u001b[0;36mrun_learner\u001b[1;34m(experience_queue, weights_path, stop_event, total_episodes)\u001b[0m\n\u001b[0;32m     74\u001b[0m         episodes_completed \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(memory) \u001b[38;5;241m<\u001b[39m batch_size \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m4\u001b[39m:\n\u001b[1;32m---> 77\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m)\u001b[49m; \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m     79\u001b[0m minibatch \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msample(memory, batch_size)\n\u001b[0;32m     81\u001b[0m states_list, actions_list, rewards_list, next_states_list, dones_list \u001b[38;5;241m=\u001b[39m [], [], [], [], []\n",
+      "Cell \u001b[1;32mIn[4], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m     actors\u001b[38;5;241m.\u001b[39mappend(actor)\n\u001b[0;32m     20\u001b[0m     actor\u001b[38;5;241m.\u001b[39mstart()\n\u001b[1;32m---> 22\u001b[0m training_history \u001b[38;5;241m=\u001b[39m \u001b[43mrun_learner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexperience_queue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mWEIGHTS_FILE\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstop_event\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mTOTAL_EPISODES_TO_TRAIN\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m actor \u001b[38;5;129;01min\u001b[39;00m actors:\n\u001b[0;32m     25\u001b[0m     actor\u001b[38;5;241m.\u001b[39mjoin()\n",
+      "Cell \u001b[1;32mIn[3], line 87\u001b[0m, in \u001b[0;36mrun_learner\u001b[1;34m(experience_queue, weights_path, stop_event, total_episodes)\u001b[0m\n\u001b[0;32m     84\u001b[0m         episodes_completed \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     86\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(memory) \u001b[38;5;241m<\u001b[39m batch_size \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m4\u001b[39m:\n\u001b[1;32m---> 87\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.1\u001b[39;49m\u001b[43m)\u001b[49m; \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m     89\u001b[0m minibatch \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39msample(memory, batch_size)\n\u001b[0;32m     91\u001b[0m states_list, actions_list, rewards_list, next_states_list, dones_list \u001b[38;5;241m=\u001b[39m [], [], [], [], []\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
