--- a/Run_Model.ipynb
+++ b/Run_Model.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "60c3e180",
    "metadata": {},
    "outputs": [
@@ -277,12 +277,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded final weights from: pretrained.weights.h5\n",
+      "Successfully loaded final weights from: a_finetuned_weights_episode_50.weights.h5\n",
       "Car crashes!\n",
       "Total actions taken by the agent during the simulation:\n",
-      "Action 0: 38\n",
-      "Action 1: 81\n",
-      "Action 2: 0\n"
+      "Action 0: 151\n",
+      "Action 1: 231\n",
+      "Action 2: 41\n"
      ]
     }
    ],
@@ -385,7 +385,7 @@
     "# --- RUN YOUR FINAL AGENT ---\n",
     "# ------------------------------------------------------------------\n",
     "# IMPORTANT: Change this to the name of the weights file saved in Phase 2\n",
-    "WEIGHTS_FILENAME = \"pretrained.weights.h5\"\n",
+    "WEIGHTS_FILENAME = \"a_finetuned_weights_episode_50.weights.h5\"\n",
     "# ------------------------------------------------------------------\n",
     "\n",
     "if not pygame.display.get_init():\n",
