--- a/Run_D3QN_model.ipynb
+++ b/Run_D3QN_model.ipynb
@@ -2,27 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f50fbf8c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\pygame\\pkgdata.py:25: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
-      "  from pkg_resources import resource_stream, resource_exists\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.6.1 (SDL 2.28.4, Python 3.13.7)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "import numpy as np\n",
@@ -35,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c9349678",
    "metadata": {},
    "outputs": [],
@@ -68,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e7754987",
    "metadata": {},
    "outputs": [],
@@ -176,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e3b88808",
    "metadata": {},
    "outputs": [
@@ -186,22 +169,32 @@
      "text": [
       "WARNING:tensorflow:From c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\core.py:232: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "Successfully loaded D3QN weights from: d3qn.weights.h5\n",
-      "Episode crash after 89 steps.\n",
-      "Action counts: {0: 10, 1: 52, 2: 28}\n",
-      "Episode crash after 90 steps.\n",
-      "Action counts: {0: 10, 1: 52, 2: 28}\n"
+      "Successfully loaded D3QN weights from: best_d3qn_36checkpoints.weights.h5\n",
+      "Episode crash after 414 steps.\n",
+      "Action counts: {0: 75, 1: 211, 2: 129}\n",
+      "Episode crash after 415 steps.\n",
+      "Action counts: {0: 75, 1: 211, 2: 129}\n",
+      "Episode crash after 415 steps.\n",
+      "Action counts: {0: 75, 1: 211, 2: 129}\n"
      ]
     }
    ],
    "source": [
-    "WEIGHTS_FILENAME = \"d3qn.weights.h5\"   # or whatever you named it\n",
+    "WEIGHTS_FILENAME = \"best_d3qn_36checkpoints.weights.h5\"   # or whatever you named it d3qn.weights.h5\n",
     "\n",
     "if not pygame.display.get_init():\n",
     "    run_d3qn_agent(WEIGHTS_FILENAME, render=True)\n",
     "else:\n",
-    "    print(\"Pygame window may already be open. Restart the kernel and try again.\")"
+    "    print(\"Pygame window may already be open. Restart the kernel and try again.\")  # 1 19"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28cd47db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
