--- a/Run_Model.ipynb
+++ b/Run_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "add19033",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c41a80d7",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9ad69a8b",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "60c3e180",
    "metadata": {},
    "outputs": [
@@ -277,12 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded final weights from: a_finetuned_weights_episode_50.weights.h5\n",
-      "Car crashes!\n",
-      "Total actions taken by the agent during the simulation:\n",
-      "Action 0: 151\n",
-      "Action 1: 231\n",
-      "Action 2: 41\n"
+      "Error loading weights: [Errno 2] Unable to synchronously open file (unable to open file: name = 'a_finetuned_weights_episode_50.weights.h5', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)\n"
      ]
     }
    ],
