--- a/Run_D3QN_model.ipynb
+++ b/Run_D3QN_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "f50fbf8c",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "c9349678",
    "metadata": {},
    "outputs": [],
@@ -46,78 +46,152 @@
     "    q_values = layers.Lambda(combine_dueling)([value, advantage])\n",
     "\n",
     "    model = models.Model(inputs=inputs, outputs=q_values)\n",
+    "    return model\n",
+    "    \n",
+    "def build_dueling_dqn(input_shape=(5,), action_size=4):\n",
+    "    from keras import layers, models, backend as K\n",
+    "    import tensorflow as tf\n",
+    "\n",
+    "    inputs = layers.Input(shape=input_shape)\n",
+    "    x = layers.Dense(128, activation='relu')(inputs)\n",
+    "    x = layers.Dense(128, activation='relu')(x)\n",
+    "\n",
+    "    # Dueling streams\n",
+    "    value = layers.Dense(64, activation='relu')(x)\n",
+    "    value = layers.Dense(1, activation='linear')(value)\n",
+    "\n",
+    "    advantage = layers.Dense(64, activation='relu')(x)\n",
+    "    advantage = layers.Dense(action_size, activation='linear')(advantage)\n",
+    "\n",
+    "    # Correct combination using Lambda layers to maintain graph compatibility\n",
+    "    def combine_dueling(inputs):\n",
+    "        value, advantage = inputs\n",
+    "        return value + (advantage - tf.reduce_mean(advantage, axis=1, keepdims=True))\n",
+    "\n",
+    "    q_values = layers.Lambda(combine_dueling)([value, advantage])\n",
+    "\n",
+    "    model = models.Model(inputs=inputs, outputs=q_values)\n",
     "    return model\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "e7754987",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def run_d3qn_agent(weights_path, render=True):\n",
-    "    \"\"\"\n",
-    "    Visual simulation for the trained D3QN agent (Double + Dueling).\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Use proper SDL backend\n",
     "    os.environ[\"SDL_VIDEODRIVER\"] = \"windows\"\n",
     "    pygame.init()\n",
     "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT))\n",
     "    clock = pygame.time.Clock()\n",
+    "    \n",
+    "    \n",
+    "    START_LINE_RECT = pygame.Rect(860, 400, 80, 60) \n",
     "    pygame.display.set_caption(\"Trained D3QN Agent\")\n",
-    "    font = pygame.font.SysFont(None, 36)\n",
+    "    font = pygame.font.SysFont(None, 24)\n",
     "    crash_font = pygame.font.SysFont(None, 72)\n",
     "\n",
-    "    # Load the environment\n",
     "    track_surface = pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
     "\n",
-    "    # Build model and load weights\n",
-    "    ai_model = build_dueling_dqn()\n",
-    "    try:\n",
-    "        ai_model.load_weights(weights_path)\n",
-    "        print(f\"Successfully loaded D3QN weights from: {weights_path}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error loading weights: {e}\")\n",
-    "        pygame.quit()\n",
-    "        return\n",
+    "    # Preserved model shape from Code 1 (5 inputs, 4 actions)\n",
+    "    model = build_dueling_dqn(input_shape=(5,), action_size=4)\n",
+    "    model.load_weights(weights_path)\n",
     "\n",
     "    car = Car(CAR_IMAGE_PATH, 900, 426, angle=-45)\n",
-    "    running = True\n",
-    "    action_counts = {0: 0, 1: 0, 2: 0}  # Left / Straight / Right\n",
+    "    car.speed = 0\n",
+    "    lap_started = False\n",
+    "    lap_start_time = None\n",
+    "    last_lap_time = None\n",
+    "    on_start_line = False\n",
+    "    can_finish_lap = False\n",
+    "    MIN_LAP_TIME = 5.0 \n",
+    "    # --- COUNTERS ADDED ---\n",
+    "    action_counts = {0: 0, 1: 0, 2: 0, 3: 0} \n",
     "    step_counter = 0\n",
     "\n",
+    "    running = True\n",
     "    while running:\n",
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                running = False\n",
     "\n",
-    "        # 1️⃣ Build state vector (3 sensors + speed)\n",
-    "        distances, ray_endpoints = ray_casting(car, track_surface)\n",
-    "        state = np.array(distances + [car.speed], dtype=np.float32)\n",
+    "        distances, rays = ray_casting(car, track_surface)\n",
+    "        left, front, right = distances\n",
+    "        left /= 200.0\n",
+    "        front /= 200.0\n",
+    "        right /= 200.0\n",
+    "        curvature = abs(left - right) / max(left + right, 1e-6)\n",
+    "\n",
+    "        state = np.array([left, front, right, car.speed, curvature], dtype=np.float32)\n",
     "        state = np.expand_dims(state, axis=0)\n",
     "\n",
-    "        # 2️⃣ Predict Q-values and select best action\n",
-    "        q_values = ai_model.predict(state, verbose=0)\n",
-    "        action = np.argmax(q_values[0])\n",
-    "        action_counts[action] += 1\n",
+    "        q = model.predict(state, verbose=0)[0]\n",
+    "        action = np.argmax(q)\n",
     "\n",
-    "        # 3️⃣ Execute action\n",
+    "        # Update stats\n",
+    "        action_counts[action] += 1\n",
+    "        step_counter += 1\n",
+    "\n",
+    "        # MATCH TRAINING PHYSICS (Preserved from Code 1)\n",
     "        if action == 0:\n",
     "            car.angle += 5\n",
+    "            car.speed = max(car.speed - 0.12, 2.0)\n",
     "        elif action == 2:\n",
     "            car.angle -= 5\n",
-    "        car.speed = min(car.speed + 0.05, 5)\n",
+    "            car.speed = max(car.speed - 0.12, 2.0)\n",
+    "        elif action == 1:\n",
+    "            car.speed = min(car.speed + 0.15, 10.0)\n",
+    "        elif action == 3:\n",
+    "            car.speed = max(car.speed - 0.30, 1.8)\n",
+    "\n",
     "        car.move()\n",
     "\n",
-    "        # 4️⃣ Check for crash (off-track color)\n",
+    "        car_rect = car.get_rect()\n",
+    "        touching_line = car_rect.colliderect(START_LINE_RECT)\n",
+    "\n",
+    "        # ---------------------------\n",
+    "        # EDGE DETECTION\n",
+    "        # ---------------------------\n",
+    "        if touching_line and not on_start_line:\n",
+    "            on_start_line = True\n",
+    "\n",
+    "            # START LAP\n",
+    "            if not lap_started:\n",
+    "                lap_started = True\n",
+    "                lap_start_time = time.time()\n",
+    "                can_finish_lap = False\n",
+    "                print(\"Lap started!\")\n",
+    "\n",
+    "            # FINISH LAP (only if allowed)\n",
+    "            elif lap_started and can_finish_lap:\n",
+    "                lap_time = time.time() - lap_start_time\n",
+    "\n",
+    "                if lap_time >= MIN_LAP_TIME:\n",
+    "                    print(\"\\nLAP COMPLETED!\")\n",
+    "                    print(f\"Lap Time: {lap_time:.2f} seconds\")\n",
+    "                    print(f\"Steps: {step_counter}\")\n",
+    "                    print(f\"Action counts: {action_counts}\\n\")\n",
+    "\n",
+    "                    last_lap_time = lap_time\n",
+    "                    lap_started = False\n",
+    "                    lap_start_time = None\n",
+    "                    can_finish_lap = False\n",
+    "\n",
+    "        # ---------------------------\n",
+    "        # LEAVING START LINE\n",
+    "        # ---------------------------\n",
+    "        if not touching_line and on_start_line:\n",
+    "            on_start_line = False\n",
+    "            if lap_started:\n",
+    "                can_finish_lap = True\n",
+    "\n",
+    "\n",
+    "        # Crash check with Text Display (Integrated features)\n",
     "        crashed = False\n",
     "        try:\n",
-    "            pixel_color = track_surface.get_at((int(car.x), int(car.y)))[:3]\n",
-    "            if pixel_color == (50, 50, 50):  # your DRAW_COLOR\n",
+    "            if track_surface.get_at((int(car.x), int(car.y)))[:3] == DRAW_COLOR:\n",
     "                crashed = True\n",
     "        except:\n",
     "            crashed = True\n",
@@ -128,38 +202,69 @@
     "            text_rect = crash_text.get_rect(center=(SCREEN_WIDTH/2, SCREEN_HEIGHT/2))\n",
     "            screen.blit(crash_text, text_rect)\n",
     "            pygame.display.update()\n",
+    "            print(\"\\nCRASH!\")\n",
+    "            if lap_started:\n",
+    "                print(f\"Time before crash: {time.time() - lap_start_time:.2f}s\")\n",
+    "            print(f\"Steps: {step_counter}\")\n",
+    "            print(f\"Action counts: {action_counts}\\n\")\n",
+    "\n",
+    "            # Wait 2 seconds to see the crash\n",
     "            pygame.time.wait(2000)\n",
-    "            print(f\"Episode crash after {step_counter} steps.\")\n",
-    "            print(\"Action counts:\", action_counts)\n",
-    "            # Reset car\n",
+    "            \n",
+    "            # Reset Car and Counters\n",
     "            car = Car(CAR_IMAGE_PATH, 900, 426, angle=-45)\n",
     "            car.speed = 0\n",
-    "            action_counts = {0: 0, 1: 0, 2: 0}\n",
+    "            action_counts = {0: 0, 1: 0, 2: 0, 3: 0}\n",
     "            step_counter = 0\n",
+    "            lap_started = False\n",
+    "            lap_start_time = None\n",
+    "            last_lap_time = None\n",
+    "            on_start_line = False\n",
+    "            can_finish_lap = False\n",
     "\n",
-    "        # 5️⃣ Render everything\n",
+    "\n",
+    "\n",
     "        if render:\n",
     "            screen.blit(track_surface, (0, 0))\n",
     "            car.draw(screen)\n",
-    "            for p in ray_endpoints:\n",
+    "            for p in rays:\n",
     "                pygame.draw.line(screen, (0, 255, 0), (car.x, car.y), p, 1)\n",
-    "\n",
-    "            action_map = {0: \"Left\", 1: \"Straight\", 2: \"Right\"}\n",
-    "            info_text = f\"Action: {action_map[action]} | Speed: {car.speed:.2f}\"\n",
+    "            \n",
+    "            # --- HUD / STATS DISPLAY ---\n",
+    "            # Line 1: Speed and Steps\n",
+    "            info_text = f\"Speed: {car.speed:.2f} | Steps: {step_counter}\"\n",
     "            text_surface = font.render(info_text, True, (255, 255, 255))\n",
     "            screen.blit(text_surface, (20, 20))\n",
+    "            \n",
+    "            # Line 2: Action Counts\n",
+    "            # Mapping based on logic: 0:Left, 1:Accel, 2:Right, 3:Brake\n",
+    "            stats_text = f\"Actions -> L(0):{action_counts[0]}  Acc(1):{action_counts[1]}  R(2):{action_counts[2]}  Brk(3):{action_counts[3]}\"\n",
+    "            stats_surface = font.render(stats_text, True, (255, 255, 255))\n",
+    "            screen.blit(stats_surface, (20, 50))\n",
+    "            pygame.draw.rect(screen, (255, 255, 0), START_LINE_RECT, 2)\n",
     "\n",
-    "            pygame.display.update()\n",
+    "            if lap_started and lap_start_time is not None:\n",
+    "                elapsed = time.time() - lap_start_time\n",
+    "                timer_text = f\"Lap Time: {elapsed:.2f}s\"\n",
+    "            elif last_lap_time is not None:\n",
+    "                timer_text = f\"Last Lap: {last_lap_time:.2f}s\"\n",
+    "            else:\n",
+    "                timer_text = \"Lap Time: --\"\n",
+    "\n",
+    "            timer_surface = font.render(timer_text, True, (255, 255, 0))\n",
+    "            screen.blit(timer_surface, (20, 80))\n",
+    "\n",
+    "\n",
+    "            pygame.display.flip()\n",
     "            clock.tick(60)\n",
+    "    \n",
     "\n",
-    "        step_counter += 1\n",
-    "\n",
-    "    pygame.quit()\n"
+    "    pygame.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "e3b88808",
    "metadata": {},
    "outputs": [
@@ -167,25 +272,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\backend\\tensorflow\\core.py:232: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "Lap started!\n",
       "\n",
-      "Successfully loaded D3QN weights from: best_d3qn_36checkpoints.weights.h5\n",
-      "Episode crash after 414 steps.\n",
-      "Action counts: {0: 75, 1: 211, 2: 129}\n",
-      "Episode crash after 415 steps.\n",
-      "Action counts: {0: 75, 1: 211, 2: 129}\n",
-      "Episode crash after 415 steps.\n",
-      "Action counts: {0: 75, 1: 211, 2: 129}\n"
+      "LAP COMPLETED!\n",
+      "Lap Time: 37.39 seconds\n",
+      "Steps: 676\n",
+      "Action counts: {0: 137, 1: 308, 2: 221, 3: 10}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "WEIGHTS_FILENAME = \"best_d3qn_36checkpoints.weights.h5\"   # or whatever you named it d3qn.weights.h5\n",
+    "WEIGHTS_FILENAME = \"best_d3qn_16checkpoints.weights.h5\"   # or whatever you named it d3qn.weights.h5\n",
     "\n",
     "if not pygame.display.get_init():\n",
     "    run_d3qn_agent(WEIGHTS_FILENAME, render=True)\n",
     "else:\n",
-    "    print(\"Pygame window may already be open. Restart the kernel and try again.\")  # 1 19"
+    "    print(\"Pygame window may already be open. Restart the kernel and try again.\")  # 14"
    ]
   },
   {
