Refactor code structure for improved readability and maintainability

--- a/Run_D3QN_model.ipynb
+++ b/Run_D3QN_model.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "id": "e3b88808",
    "metadata": {},
    "outputs": [
@@ -272,18 +272,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lap started!\n",
-      "\n",
-      "LAP COMPLETED!\n",
-      "Lap Time: 37.39 seconds\n",
-      "Steps: 676\n",
-      "Action counts: {0: 137, 1: 308, 2: 221, 3: 10}\n",
-      "\n"
+      "Lap started!\n"
      ]
     }
    ],
    "source": [
-    "WEIGHTS_FILENAME = \"best_d3qn_16checkpoints.weights.h5\"   # or whatever you named it d3qn.weights.h5\n",
+    "WEIGHTS_FILENAME = \"best_1.weights.h5\"   # or whatever you named it d3qn.weights.h5\n",
     "\n",
     "if not pygame.display.get_init():\n",
     "    run_d3qn_agent(WEIGHTS_FILENAME, render=True)\n",
