Refactor code structure for improved readability and maintainability

--- a/Run_D3QN_model.ipynb
+++ b/Run_D3QN_model.ipynb
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "id": "e3b88808",
    "metadata": {},
    "outputs": [
@@ -272,12 +272,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lap started!\n"
+      "Lap started!\n",
+      "\n",
+      "LAP COMPLETED!\n",
+      "Lap Time: 44.13 seconds\n",
+      "Steps: 746\n",
+      "Action counts: {0: 107, 1: 380, 2: 190, 3: 69}\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "WEIGHTS_FILENAME = \"best_1.weights.h5\"   # or whatever you named it d3qn.weights.h5\n",
+    "WEIGHTS_FILENAME = \"best_lap_1.weights.h5\"   # or whatever you named it d3qn.weights.h5\n",
     "\n",
     "if not pygame.display.get_init():\n",
     "    run_d3qn_agent(WEIGHTS_FILENAME, render=True)\n",
